MDEV-26041 Recovery failure due to delete-marked SYS_FIELDS record

trx_t::drop_table(): Delete-mark the SYS_TABLES and SYS_INDEXES
record before delete-marking any SYS_COLUMNS or SYS_FIELDS records.
Otherwise, dict_load_indexes() could fail on recovery. This fixes up
commit 1bd681c8b3c5213ce1f7976940a7dc38b48a0d39 (MDEV-25506).